--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -17,7 +17,7 @@
                             <div (click)="getUserProfile(post.username)" style="cursor: pointer" class="ml-2">
                                 <div class="h5 m-0">{{ post?.username }}</div>
                                 <div class="h7 text-muted">
-                                    {{ post?.postedDate | date: "mediumDate" }}, near
+                                    {{ post?.postedDate | date: "mediumDate" }}
                                     {{ post?.location }}
                                 </div>
                             </div>
