--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -98,7 +98,7 @@
             </form>
             <br /><br />
             <button class="btn" data-toggle="modal" data-target="#changePassword" style="color: #EB6864;">
-                Chage Password</button><br /><br />
+                Change Password</button><br /><br />
         </div>
     </div>
 </div>
