--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,12 +17,10 @@
                             </div>
                             <div (click)="getUserProfile(post.username)" style="cursor: pointer" class="ml-2">
                                 <div style="color:#18BC9C;cursor:pointer;" class="h5 m-0">{{ post.username }}</div>
-                                <div class="h7">
+                                <div class="h7 text-muted">
                                     {{ post?.location }}
                                     <br>
-                                    {{ post?.postedDate | date: "mediumDate" }} &nbsp;
-
-                                    {{ post?.postedDate | date: "shortTime" }}
+                                    {{ post?.postedDate | date: "mediumDate" }}
                                 </div>
                                 <p class="card-text">{{ post.caption }}</p>
                             </div>
@@ -72,7 +70,7 @@
                                         style="color:#18BC9C;cursor:pointer;"><strong>{{
                           comment.username }}</strong></a>
                                     <span class="text-secondary float-right">
-                                        {{ comment?.postedDate | date: "short" }}
+                                        {{ comment?.postedDate | date: "mediumDate" }}
                                     </span>
                                 </p>
                                 <div class="clearfix"></div>
