--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,5 @@
 .card-text {
-    font-size: 1.2rem;
-    font-family: 'Courier New', Courier, monospace;
-  }
+  font-size: 1.25rem;
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+}
