--- a/src/app/components/post-detail/post-detail.component.css
+++ b/src/app/components/post-detail/post-detail.component.css
@@ -8,6 +8,7 @@
   }
   
   .card-text {
-    font-size: 1.2rem;
+    font-size: 1.25rem;
+    font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
   }
