--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -23,6 +23,7 @@
 
 
                                 </div>
+                                <p class="card-text">{{ post.caption }}</p>
                             </div>
                         </div>
                         <div>
