--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Bootswatch provides basic custom Bootstrap themes - here we use Flatly theme */
-@import "https://bootswatch.com/4/cyborg/bootstrap.min.css";
+@import "https://bootswatch.com/4/flatly/bootstrap.min.css";
 @import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 
 body {
-  background-color: #293131;
+  background-color: #f4f6f6;
 }
 
 a {
