--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,30 @@
 .card-text {
   font-size: 1.25rem;
   font-weight: bold;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
+  color: maroon;
+}
+
+.card-link {
+  color: firebrick;
+}
+
+.card-body {
+  color: rgb(95, 8, 8);
+}
+
+/* profile pic */
+.ui-w-60 {
+  width: 60px !important;
+  height: 60px;
+  border: 1px solid silver;
+  margin-bottom: 10px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  height: 50px;
 }
