--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,142 +2,199 @@
 
 <!-- Page Content -->
 <div class="container">
-    <h1 class="mt-4 mb-3"></h1>
-    <div class="row">
-        <!-- Blog Entries Column -->
-        <div class="col-md-8">
-            <!-- Blog Post -->
-            <div *ngFor="let post of posts" class="card mb-4">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div (click)="getUserProfile(post.username)" class="mr-2" style="cursor: pointer">
-                                <img class="rounded-circle" width="45" src="{{ userHost }}/{{ post?.userImageId }}.png"
-                                    alt="" />
-                            </div>
-                            <div (click)="getUserProfile(post.username)" style="cursor: pointer" class="ml-2">
-                                <div style="color:#18BC9C;cursor:pointer;" class="h5 m-0">{{ post.username }}</div>
-                                <div class="h7 text-muted">
-                                    {{ post?.location }}
-                                    <br>
-                                    {{ post?.postedDate | date: "mediumDate" }}
-                                </div>
-                                <p class="card-text">{{ post.caption }}</p>
-                            </div>
-
-                        </div>
-                        <div>
-                            <div *ngIf="user.username == post.username" class="dropdown">
-                                <button class="btn btn-link dropdown-toggle" type="button" id="gedf-drop1"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fa fa-ellipsis-h"></i>
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="gedf-drop1">
-                                    <a class="dropdown-item" (click)="onDelete(post?.id)">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
+  <h1 class="mt-4 mb-3"></h1>
+  <div class="row">
+    <!-- Blog Entries Column -->
+    <div class="col-md-8">
+      <!-- Blog Post -->
+      <div *ngFor="let post of posts" class="card mb-4">
+        <div class="card-header">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center">
+              <div
+                (click)="getUserProfile(post.username)"
+                class="mr-2"
+                style="cursor: pointer"
+              >
+                <img
+                  class="rounded-circle ui-w-60"
+                  src="{{ userHost }}/{{ post?.userImageId }}.png"
+                  alt="Profile Pic"
+                />
+              </div>
+              <div
+                (click)="getUserProfile(post.username)"
+                style="cursor: pointer"
+                class="ml-2"
+              >
+                <div style="color: #bc5a18; cursor: pointer" class="h5 m-0">
+                  {{ post.username }}
                 </div>
-                <img (click)="seeOnePost(post.id)" style="cursor:pointer;" class="card-img-top"
-                    src="{{ postHost }}/{{ post?.name }}.png" alt="Card image cap" />
+                <div class="h7 text-muted" style="margin: 0; line-height: 1">
+                  {{ post?.location }}
+                  <br />
+                  {{ post?.postedDate | date: "mediumDate" }}
+                </div>
+                <p class="card-text">{{ post.caption }}</p>
+              </div>
+            </div>
+            <div>
+              <div *ngIf="user.username == post.username" class="dropdown">
+                <button
+                  class="btn btn-link dropdown-toggle"
+                  type="button"
+                  id="gedf-drop1"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  <i class="fa fa-ellipsis-h"></i>
+                </button>
+                <div
+                  class="dropdown-menu dropdown-menu-right"
+                  aria-labelledby="gedf-drop1"
+                >
+                  <a class="dropdown-item" (click)="onDelete(post?.id)"
+                    >Delete</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img
+          (click)="seeOnePost(post.id)"
+          style="cursor: pointer"
+          class="card-img-top"
+          src="{{ postHost }}/{{ post?.name }}.png"
+          alt="Card image cap"
+        />
 
-                <!-- <h5 style="color:#18BC9C;cursor:pointer;" (click)="getUserProfile(post.username)"
+        <!-- <h5 style="color:#bc5a18;cursor:pointer;" (click)="getUserProfile(post.username)"
                         class="card-title">
                         {{ post.username }}
                     </h5> -->
 
-                <!-- comments and likes go here -->
-                <div class="card-body">
-                    <!-- comments and likes visible on home page but disabled since home display an array of posts
+        <!-- comments and likes go here -->
+        <div class="card-body">
+          <!-- comments and likes visible on home page but disabled since home display an array of posts
                             and not the route of a single post to manipulate directly -->
-                    <a class="card-link" style="cursor:default;">{{ post?.likes }}<i class="fa fa-gittip"></i></a>
-                    <a class="card-link float-right" style="cursor:default;">{{ post?.commentList?.length }}<i
-                            class="fa fa-comment"></i></a>
-                    <!-- <h5 style="color:#18BC9C;cursor:pointer;" (click)="getUserProfile(post.username)"
+          <a class="card-link" style="cursor: default"
+            >{{ post?.likes }}<i class="fa fa-gittip"></i
+          ></a>
+          <a class="card-link float-right" style="cursor: default"
+            >{{ post?.commentList?.length }}<i class="fa fa-comment"></i
+          ></a>
+          <!-- <h5 style="color:#bc5a18;cursor:pointer;" (click)="getUserProfile(post.username)"
                             class="card-title">
                             {{ post?.username }}
                         </h5> -->
-
-                </div>
-
-                <div class="collapse" id="{{ post.name }}">
-                    <div *ngFor="let comment of post?.commentList" class="card-body">
-                        <div class="row">
-                            <div class="col-md-12" style="padding: -50px 0px;">
-                                <p>
-                                    <a class="float-left" (click)="getUserProfile(comment.username)"
-                                        style="color:#18BC9C;cursor:pointer;"><strong>{{
-                          comment.username }}</strong></a>
-                                    <span class="text-secondary float-right">
-                                        {{ comment?.postedDate | date: "mediumDate" }}
-                                    </span>
-                                </p>
-                                <div class="clearfix"></div>
-                                <p>{{ comment?.content }}</p>
-                            </div>
-                        </div>
-                    </div>
-                    <hr />
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <p><a class="float-left" href="#"></a></p>
-                                <div class="clearfix"></div>
-                                <form #commentForm="ngForm" (ngSubmit)="onAddComment(commentForm, post)">
-                                    <input type="hidden" name="username" ngModel="{{ user?.username }}" />
-                                    <input type="hidden" name="postId" ngModel="{{ post?.id }}" />
-                                    <p>
-                                        <input type="text" name="content" [(ngModel)]="comment.content"
-                                            class="form-control" id="comment" />
-                                    </p>
-
-                                    <button [disabled]="comment.content == ''" type="submit"
-                                        class="float-right btn btn-primary ml-2">
-                                        <i class="fa fa-arrow-right" style="font-size: 20px;"></i>
-                                    </button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-            </div>
-            <br />
-            <br />
-            <ul class="pagination justify-content-center mb-4">
-            </ul>
         </div>
 
-        <!-- Sidebar  -->
-        <div class="col-md-4">
-            <div>
-                <div class="card mb-4" style="background-color:#ecf0f1;">
-                    <div class=" card-body">
-                        <div class="m-t-30 text-center">
-                            <a *ngIf="user?.id > 0" (click)="getUserProfile(user?.username)">
-                                <img src="{{ userHost }}/{{ user?.id }}.png" alt="Profile Picture"
-                                    class="img-fluid rounded-circle w-60" width="60" height="60" /></a>
-                            <h6 class="card-title m-t-10">{{ user?.username }}</h6>
-                            <a (click)="getUserProfile(user.username)" style="cursor:pointer;" class="link">
-                                <span style="margin-right: 5px;" class="font-medium">{{
-                  user.post?.length
-                  }}</span><i class="fa fa-image"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+        <div class="collapse" id="{{ post.name }}">
+          <div *ngFor="let comment of post?.commentList" class="card-body">
+            <div class="row">
+              <div class="col-md-12" style="padding: -50px 0px">
+                <p>
+                  <a
+                    class="float-left"
+                    (click)="getUserProfile(comment.username)"
+                    style="color: #bc5a18; cursor: pointer"
+                    ><strong>{{ comment.username }}</strong></a
+                  >
+                  <span class="text-secondary float-right">
+                    {{ comment?.postedDate | date: "mediumDate" }}
+                  </span>
+                </p>
+                <div class="clearfix"></div>
+                <p>{{ comment?.content }}</p>
+              </div>
             </div>
+          </div>
+          <hr />
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12">
+                <p><a class="float-left" href="#"></a></p>
+                <div class="clearfix"></div>
+                <form
+                  #commentForm="ngForm"
+                  (ngSubmit)="onAddComment(commentForm, post)"
+                >
+                  <input
+                    type="hidden"
+                    name="username"
+                    ngModel="{{ user?.username }}"
+                  />
+                  <input type="hidden" name="postId" ngModel="{{ post?.id }}" />
+                  <p>
+                    <input
+                      type="text"
+                      name="content"
+                      [(ngModel)]="comment.content"
+                      class="form-control"
+                      id="comment"
+                    />
+                  </p>
+
+                  <button
+                    [disabled]="comment.content == ''"
+                    type="submit"
+                    class="float-right btn btn-primary ml-2"
+                  >
+                    <i class="fa fa-arrow-right" style="font-size: 20px"></i>
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+      <br />
+      <br />
+      <ul class="pagination justify-content-center mb-4"></ul>
     </div>
-    <!-- /.row -->
+
+    <!-- Sidebar  -->
+    <div class="col-md-4">
+      <div>
+        <div class="card mb-4" style="background-color: #ecf0f1">
+          <div class="card-body">
+            <div class="m-t-30 text-center">
+              <a *ngIf="user?.id > 0" (click)="getUserProfile(user?.username)">
+                <img
+                  src="{{ userHost }}/{{ user?.id }}.png"
+                  alt="Profile Picture"
+                  class="img-fluid rounded-circle ui-w-60"
+                  width="60"
+                  height="60"
+              /></a>
+              <h6 class="card-title m-t-10">{{ user?.username }}</h6>
+              <a
+                (click)="getUserProfile(user.username)"
+                style="cursor: pointer"
+                class="link"
+              >
+                <span
+                  class="font-medium"
+                  style="margin-right: 5px; color: darkorange"
+                  >{{ user.post?.length }}</span
+                ><i class="fa fa-image" style="color: darkorange"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /.row -->
 </div>
 <!-- /.container -->
-<footer class="text-muted">
-    <div class="container">
-        <p>Vineyard &copy; 2020</p>
-    </div>
+<footer class="text-muted footer">
+  <div>
+    <p>
+      Vineyard &copy;
+      {{ currentYear }}
+    </p>
+  </div>
 </footer>
