--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,32 +2,63 @@
 
 <!-- form -->
 <div class="container justify-content-center align-items-center">
-    <div class="form-wrapper text-center">
-        <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm.value)" class="form-signin">
-            <h2 class="h3 mb-3 font-weight-normal">Log In</h2>
-            <div class="form-group">
-                <input type="text" class="form-control" name="username" placeholder="Username" required ngModel
-                    #usernameInput="ngModel" />
-                <span class="help-block" *ngIf="usernameInput.invalid && usernameInput.touched">Please enter a
-                    username</span>
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" name="password" placeholder="Password" required ngModel
-                    #passwordInput="ngModel" />
-                <span class="help-block" *ngIf="passwordInput.invalid && passwordInput.touched">Please enter a
-                    password.</span>
-            </div>
-            <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">
-                Sign in
-            </button>
-            <div>
-                <br>
-                <p class="note">For App demo purposes <strong>username: test</strong> and
-                    <strong>password: test</strong> may be entered.
-                </p>
-            </div>
-        </form>
-        <small><a routerLink="/reset-password">Forgot password?</a></small><br />
-        <small><a routerLink="/signup">Need an account?</a></small>
-    </div>
+  <div class="form-wrapper text-center">
+    <form
+      #loginForm="ngForm"
+      (ngSubmit)="onLogin(loginForm.value)"
+      class="form-signin"
+    >
+      <h2 class="h4 mb-2 mt-5 pt-2 font-weight-normal">Welcome to Vineyard!</h2>
+      <h2 class="h5 p-1 font-weight-normal">Please log in below.</h2>
+      <div class="form-group">
+        <input
+          type="text"
+          class="form-control"
+          name="username"
+          placeholder="Username"
+          required
+          ngModel
+          #usernameInput="ngModel"
+        />
+        <span
+          class="help-block"
+          *ngIf="usernameInput.invalid && usernameInput.touched"
+          >Please enter a username</span
+        >
+      </div>
+      <div class="form-group">
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          placeholder="Password"
+          required
+          ngModel
+          #passwordInput="ngModel"
+        />
+        <span
+          class="help-block"
+          *ngIf="passwordInput.invalid && passwordInput.touched"
+          >Please enter a password.</span
+        >
+      </div>
+      <button
+        [disabled]="loginForm.invalid"
+        class="btn btn-lg btn-primary btn-block"
+        type="submit"
+      >
+        Sign in
+      </button>
+      <div>
+        <br />
+        <p class="note">
+          For App demo purposes <strong>username: test</strong> and
+          <strong>password: test</strong> may be entered.
+        </p>
+      </div>
+    </form>
+    <small><a routerLink="/reset-password">Forgot password?</a></small
+    ><br />
+    <small><a routerLink="/signup">Need an account?</a></small>
+  </div>
 </div>
