--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,111 +1,141 @@
-body {
-    padding-top: 54px;
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+}
+
+.portfolio-item {
+  margin-bottom: 30px;
+}
+
+.pagination {
+  margin-bottom: 30px;
+}
+
+.header-container {
+  margin-top: -50px;
+  /* max-height: 40px; */
+}
+.text-white {
+  color: #fff !important;
+}
+.ui-bg-overlay-container,
+.ui-bg-video-container {
+  position: relative;
+}
+.ui-bg-cover {
+  background-color: transparent;
+  background-position: center center;
+  background-size: cover;
+}
+.ui-bg-overlay-container .ui-bg-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+}
+
+.bg-dark {
+  background-color: rgba(24, 28, 33, 0.9) !important;
+}
+.opacity-50 {
+  opacity: 0.5 !important;
+}
+.bg-dark {
+  background-color: rgba(24, 28, 33, 0.9) !important;
+}
+.ui-bg-overlay-container > *,
+.ui-bg-video-container > * {
+  position: relative;
+}
+@media (min-width: 992px) {
+  .container,
+  .container-fluid {
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
-  
-  @media (min-width: 992px) {
-    body {
-      padding-top: 56px;
-    }
+}
+.media,
+.media > :not(.media-body),
+.jumbotron,
+.card {
+  -ms-flex-negative: 1;
+  flex-shrink: 1;
+}
+.d-flex,
+.d-inline-flex,
+.media,
+.media > :not(.media-body),
+.jumbotron,
+.card {
+  -ms-flex-negative: 1;
+  flex-shrink: 1;
+}
+/* profile pic */
+.ui-w-100 {
+  width: 100px !important;
+  height: 100px;
+  border: 1px solid silver;
+  margin-bottom: 10px;
+}
+.font-weight-bold {
+  font-weight: 700 !important;
+}
+.opacity-75 {
+  opacity: 0.75 !important;
+}
+.tabs-alt.nav-tabs .nav-link.active,
+.tabs-alt.nav-tabs .nav-link.active:hover,
+.tabs-alt.nav-tabs .nav-link.active:focus,
+.tabs-alt > .nav-tabs .nav-link.active,
+.tabs-alt > .nav-tabs .nav-link.active:hover,
+.tabs-alt > .nav-tabs .nav-link.active:focus {
+  -webkit-box-shadow: 0 -2px 0 maroon inset;
+  box-shadow: 0 -2px 0 maroon inset;
+}
+
+.nav-tabs {
+}
+
+.nav-link {
+  color: firebrick;
+  margin-top: 20px;
+  padding: 20px 50px;
+}
+@media (max-width: 550px) {
+  .nav-link {
+    margin-top: 20px;
+    padding: 10px 20px;
   }
-  
-  .portfolio-item {
-    margin-bottom: 30px;
-  }
-  
-  .pagination {
-    margin-bottom: 30px;
-  }
-  
-  .btn-info {
-      margin-left: 35%;
-  }
-  
-  
-  .header-container{
-      margin-top: -50px;
-      /* max-height: 40px; */
-  }
-  .text-white {
-      color: #fff !important;
-  }
-  .ui-bg-overlay-container, .ui-bg-video-container {
-      position: relative;
-  }
-  .ui-bg-cover {
-      background-color: transparent;
-      background-position: center center;
-      background-size: cover;
-  }
-  .ui-bg-overlay-container .ui-bg-overlay {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      display: block;
-  }
-  
-  .bg-dark {
-      background-color: rgba(24,28,33,0.9) !important;
-  }
-  .opacity-50 {
-      opacity: .5 !important;
-  }
-  .bg-dark {
-      background-color: rgba(24,28,33,0.9) !important;
-  }
-  .ui-bg-overlay-container>*, .ui-bg-video-container>* {
-      position: relative;
-  }
-  @media (min-width: 992px){
-      .container, .container-fluid {
-          padding-right: 2rem;
-          padding-left: 2rem;
-      }
-  }
-  .media, .media>:not(.media-body), .jumbotron, .card {
-      -ms-flex-negative: 1;
-      flex-shrink: 1;
-  }
-  .d-flex, .d-inline-flex, .media, .media>:not(.media-body), .jumbotron, .card {
-      -ms-flex-negative: 1;
-      flex-shrink: 1;
-  }
-  .ui-w-100 {
-      width: 100px !important;
-      height: auto;
-  }
-  .font-weight-bold {
-      font-weight: 700 !important;
-  }
-  .opacity-75 {
-      opacity: .75 !important;
-  }
-  .tabs-alt.nav-tabs .nav-link.active, .tabs-alt.nav-tabs .nav-link.active:hover, .tabs-alt.nav-tabs .nav-link.active:focus, .tabs-alt>.nav-tabs .nav-link.active, .tabs-alt>.nav-tabs .nav-link.active:hover, .tabs-alt>.nav-tabs .nav-link.active:focus {
-      -webkit-box-shadow: 0 -2px 0 #26B4FF inset;
-      box-shadow: 0 -2px 0 #26B4FF inset;
-  }
-  
-  .nav-tabs:not(.nav-fill):not(.nav-justified) .nav-link, .nav-pills:not(.nav-fill):not(.nav-justified) .nav-link {
-      margin-right: .125rem;
-  }
-  .nav-tabs.tabs-alt .nav-link, .tabs-alt>.nav-tabs .nav-link {
-      border-width: 0 !important;
-      border-radius: 0 !important;
-      background-color: transparent !important;
-  }
-  .nav-tabs .nav-link.active {
-      border-bottom-color: #fff;
-  }
-  
-  /* .media img {
+}
+
+.nav-tabs:not(.nav-fill):not(.nav-justified) .nav-link,
+.nav-pills:not(.nav-fill):not(.nav-justified) .nav-link {
+  margin-right: 0.125rem;
+}
+.nav-tabs.tabs-alt .nav-link,
+.tabs-alt > .nav-tabs .nav-link {
+  border-width: 0 !important;
+  border-radius: 0 !important;
+  background-color: transparent !important;
+}
+.nav-tabs .nav-link.active {
+  border-bottom-color: #fff;
+}
+
+/* .media img {
       width:  135px;
       height: 135px;
   } */
-  
-  img {
-      width:  100%;
-      height: 250px;
-      background-position: 50% 50%;
-  }
-  
+
+img {
+  width: 100%;
+  height: 250px;
+  background-position: 50% 50%;
+}
