--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,42 +2,80 @@
 
 <!-- form -->
 <div class="container justify-content-center align-items-center">
-    <div class="form-wrapper text-center">
-        <form #registerForm="ngForm" (ngSubmit)="onRegister(registerForm.value)" class="form-signin">
-            <h2 class="h3 mb-3 font-weight-normal">Sign Up</h2>
-            <div class="form-group">
-                <input type="text" class="form-control" name="name" placeholder="Name" required ngModel
-                    #nameInput="ngModel">
-                <span class="help-block" *ngIf="nameInput.invalid && nameInput.touched">Please enter your full
-                    name.</span>
-            </div>
+  <div class="form-wrapper text-center">
+    <form
+      #registerForm="ngForm"
+      (ngSubmit)="onRegister(registerForm.value)"
+      class="form-signin"
+    >
+      <h2 class="h4 mb-2 mt-5 pt-2 font-weight-normal">Welcome to Vineyard!</h2>
+      <h2 class="h5 p-1 font-weight-normal">Please sign up below.</h2>
+      <div class="form-group">
+        <input
+          type="text"
+          class="form-control"
+          name="name"
+          placeholder="Name"
+          required
+          ngModel
+          #nameInput="ngModel"
+        />
+        <span class="help-block" *ngIf="nameInput.invalid && nameInput.touched"
+          >Please enter your full name.</span
+        >
+      </div>
 
-            <div class="form-group">
-                <input type="text" class="form-control" name="username" placeholder="Username" required ngModel
-                    #usernameInput="ngModel">
-                <span class="help-block" *ngIf="usernameInput.invalid && usernameInput.touched">Please enter a
-                    username.</span>
-            </div>
+      <div class="form-group">
+        <input
+          type="text"
+          class="form-control"
+          name="username"
+          placeholder="Username"
+          required
+          ngModel
+          #usernameInput="ngModel"
+        />
+        <span
+          class="help-block"
+          *ngIf="usernameInput.invalid && usernameInput.touched"
+          >Please enter a username.</span
+        >
+      </div>
 
-            <div class="form-group">
-                <input type="text" class="form-control" name="email" placeholder="Email" email required ngModel
-                    #emailInput="ngModel">
-                <span class="help-block" *ngIf="emailInput.invalid && emailInput.touched">Please enter a valid email
-                    address.</span>
-            </div>
+      <div class="form-group">
+        <input
+          type="text"
+          class="form-control"
+          name="email"
+          placeholder="Email"
+          email
+          required
+          ngModel
+          #emailInput="ngModel"
+        />
+        <span
+          class="help-block"
+          *ngIf="emailInput.invalid && emailInput.touched"
+          >Please enter a valid email address.</span
+        >
+      </div>
 
+      <button
+        [disabled]="registerForm.invalid"
+        class="btn btn-lg btn-primary btn-block"
+        type="submit"
+      >
+        Sign Up
+      </button>
+      <br />
 
-
-            <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Sign
-                Up</button>
-            <br>
-
-            <div>
-                <p class="note">A secure password will be sent to the e-mail address provided.
-                    Users can update their password upon successful log in.</p>
-            </div>
-        </form>
-        <small><a routerLink="/login">Have an Account? Log in</a></small>
-    </div>
-
+      <div>
+        <p class="note">
+          A secure password will be sent to the e-mail address provided. Users
+          can update their password upon successful log in.
+        </p>
+      </div>
+    </form>
+    <small><a routerLink="/login">Have an Account? Log in</a></small>
+  </div>
 </div>
