--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,13 @@
 
 body {
   background-color: #f4f6f6;
+  min-height: 100vh;
 }
 
 a {
   cursor: pointer;
 }
 
-.help-block{
+.help-block {
   color: rgb(179, 63, 34);
 }
